# promptune

./: .env.example  .gitignore  .promptune-config.yaml  404.html  ASKUSERQUESTION_INTEGRATION.md  CHANGELOG.md  CLAUDE.md  COST_OPTIMIZATION_ANALYSIS.md  CTX_IMPROVE_CONCEPT.md  EXECUTION_ANALYSIS_AND_FIX_PLAN.md  IMPLEMENTATION_SUMMARY_v0.4.0.md  LICENSE  MIGRATION.md  OutputStyles.md  PLUGIN_ARCHITECTURE.md  PLUGIN_IMPROVEMENTS.md  PUBLISHING.md  QUICKSTART_SKILLS.md  README.md  SESSION_SUMMARY_2025-10-27.md  ToolRouterPlan.md  ULTRA_THINKING_AGENT_STRATEGY.md  UNIFIED_DRY_STRATEGY.md  decisions.yaml  feature_list.json  features.yaml  feedback.md  index.html  main.py  marimo_tutorial_sql.py  mkdocs.yml  objects.inv  package.json  permissions.txt  pyproject.toml  sitemap.xml  statusline.sh
.analysis/: CONVERSATION_FLOW_ARCHITECTURE.md  SUB_AGENT_STORAGE_ARCHITECTURE.md
.claude-plugin/: marketplace.json  plugin.json
.htmlgraph/: agents.json  parent-activity.json
.htmlgraph/events/: sess-494cb836.jsonl  sess-66b63aba.jsonl
.htmlgraph/features/: feat-3e7e6183.html  feat-4cec1d2e.html  feat-c34238da.html  spike-20251223090227.html
.htmlgraph/hooks/: pre-commit.sh
.htmlgraph/sessions/: sess-494cb836.html  sess-66b63aba.html
.plans/: ARCHITECTURE_IMPROVEMENTS_v0.5.1.md  CONFIGURE_COMMAND_SPEC.md  CONTEXT_GROUNDED_RESEARCH.md  ENHANCED_WORKFLOW_ARCHITECTURE.md  IMPLEMENTATION_PLAN_v0.5.0.md  WORKFLOW_IMPROVEMENT_PLAN.md  intent-driven-mcp-loading.md
.plans/contextune-documentation-workflow-review/: design.md
.plans/decision-tracking-system/: AUTOMATED_CONTEXT_PRESERVATION.md  CHECKPOINT_PATTERN.md  COMPLETE_IMPLEMENTATION.md  CONTEXT_PRESERVING_OUTPUT_STYLE.md  DRY_CONTEXT_ARCHITECTURE.md  FINAL_ARCHITECTURE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  OUTPUT_STYLE_FOR_EXTRACTION.md  README.md  SCRIPT_DISCOVERY_SYSTEM.md  TOOL_CALL_TOKEN_ANALYSIS.md  WRITE_TOOL_VS_EXTRACTION_ANALYSIS.md  plan.yaml  unified-tracking-plan.yaml
AGENT_ARCHITECTURE_SUMMARY/: index.html
AGENT_INTEGRATION_GUIDE/: index.html
AUTO_APPROVAL_CONFIGURATION/: index.html
BUGS/: index.html
CLAUDE_CODE_TRANSCRIPT_LOCATION/: index.html
COST_OPTIMIZATION_GUIDE/: index.html
HAIKU_AGENT_ARCHITECTURE/: index.html
HOOK_OUTPUT_REPORT/: index.html
IMPLEMENTATION_SUMMARY/: index.html
OBSERVABILITY/: index.html
PARALLEL_SETUP_PATTERN/: index.html
PLAN_DIRECT_CREATION_DESIGN/: index.html
PROMPT_AUGMENTATION/: index.html
RESEARCH_AGENTS_GUIDE/: index.html
SKILLS/: index.html
SKILLS_ENHANCEMENT/: index.html
SKILLS_IMPLEMENTATION_SUMMARY/: index.html
TOKEN_ESTIMATION_ARCHITECTURE/: index.html
USAGE_INTEGRATION/: index.html
USAGE_REALITY_CHECK/: index.html
agents/: issue-orchestrator.md  parallel-task-executor.md  performance-analyzer.md  test-runner.md  worktree-manager.md
cli-orchestrator-design/: CLI_ORCHESTRATION_ANALYSIS.md  CLI_ORCHESTRATION_DECISION.md
cli-orchestrator-test/: parallel_cli_test.sh
commands/: ctx-cleanup.md  ctx-configure.md  ctx-configure.py  ctx-dashboard.py  ctx-design.md  ctx-execute.md  ctx-git-commit.md  ctx-help.md  ctx-plan.md  ctx-research.md  ctx-stats.md  ctx-status.md  ctx-usage.md  ctx-verify.md  promptune-config.md  promptune-usage.md  slashsense-stats.py
copilot-delegate/: FINAL_RECOMMENDATION.md  INTEGRATION_SUMMARY.md  OLD_VS_NEW_DESIGN.md  PARALLEL_INTEGRATION_ANALYSIS.md  README.md  REVISED_ARCHITECTURE.md  SIMPLIFIED_WORKFLOW.md
copilot-results/: copilot_20251027_230828_71b42a85.json
data/: intent_mappings.json
delegation-modes/: index.html
docs/: AGENT_ARCHITECTURE_SUMMARY.md  AGENT_INTEGRATION_GUIDE.md  AUTO_APPROVAL_CONFIGURATION.md  BUGS.md  CLAUDE_CODE_TRANSCRIPT_LOCATION.md  COST_OPTIMIZATION_GUIDE.md  HAIKU_AGENT_ARCHITECTURE.md  HOOK_OUTPUT_REPORT.md  IMPLEMENTATION_SUMMARY.md  OBSERVABILITY.md  PARALLEL_SETUP_PATTERN.md  PLAN_DIRECT_CREATION_DESIGN.md  PROMPT_AUGMENTATION.md  RESEARCH_AGENTS_GUIDE.md  SKILLS.md  SKILLS_ENHANCEMENT.md  SKILLS_IMPLEMENTATION_SUMMARY.md  TOKEN_ESTIMATION_ARCHITECTURE.md  USAGE_INTEGRATION.md  USAGE_REALITY_CHECK.md  delegation-modes.md  hook-output-analysis.md  index.md  subagent-instructions.md
docs/javascripts/: extra.js
examples/: session_start_with_context.js  session_start_zero_context.js
hook-output-analysis/: index.html
hooks/: compact_start.js  context_injector.js  context_preserver.py  context_restorer.js  git_workflow_detector.py  hooks.json  pre_tool_use_git_advisor.py  pre_tool_use_state_sync.py  promptune_execute_tracker.py  promptune_plan_tracker.py  session_end_extractor.py  session_end_recorder.py  session_start.js  session_start_git_context.py  tool_cost_tracker.py  tool_router.py  user_prompt_submit.py  version_checker.js
javascripts/: extra.js
lib/: command_discovery.py  decision_link.py  detection_db.py  extraction_patterns.py  global_observability.py  install_manifest.py  keyword_matcher.py  keyword_matcher_v2.py  model2vec_matcher.py  observability_db.py  plan_builder.py  semantic_router_matcher.py  unified_intent_detector.py  usage_monitor.py
notebooks/: promptune_metrics_dashboard.py
output-styles/: README.md  extraction-optimized.md
scripts/: README.md  SMART_EXECUTION_README.md  benchmark_storage.sh  commit_and_push.sh  create_pr.sh  create_prs.sh  decision-link.py  decision-query.py  decision-sync.py  extract-current-plan.sh  extract-plan-from-context.py  feature-complete.py  feature-complete.sh  feature-execute.py  feature-execute.sh  feature-graph.py  feature-graph.sh  feature-status.py  feature-status.sh  generate_mappings.py  haiku_error_handler.sh  merge_and_cleanup.sh  plan-viewer.py  session-status.sh  setup_worktrees.sh  smart_execute.sh  view_session_metrics.sh
search/: search_index.json
skills/: README.md
stylesheets/: extra.css
subagent-instructions/: index.html
tests/: __init__.py  test_ctx_configure_integration.py  test_decision_link.py  test_decision_query.py  test_decision_sync.py  test_keyword.py  test_observability_corrections.py  test_session_end_extractor.py  test_smart_execution.sh  test_user_prompt_submit.py
(+111 files in other folders)
